// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChecklistPeriodicTrigger > that DAILY trigger renders correctly 1`] = `
<div
  data-v-app=""
>
  
  
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="DAILY"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  <!--v-if-->
  <span
    class="ma-1"
  >
    show at
  </span>
  
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="08:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="14:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  
  <span>
    <evocon-v-button-stub
      class="ma-1"
      color="quaternary-dark"
      disabled="false"
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      size="small"
      text="Time"
      textclass=""
      type="primary"
    />
  </span>
  
  
  <!--v-if-->
  
</div>
`;

exports[`ChecklistPeriodicTrigger > that MONTHLY trigger renders correctly 1`] = `
<div
  data-v-app=""
>
  
  
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="MONTHLY"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <span
    class="d-flex white-space-nowrap align-center"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="ma-1"
      >
        repeat every
      </span>
      <evocon-number-input-stub
        allowfloat="true"
        allownegative="false"
        class="ma-1"
        error="false"
        grow="true"
        maxvalue="999999999999999"
        modelvalue="1"
        suffix="month"
        usechip="true"
      />
    </div>
    <!--v-if-->
  </span>
  <!--v-if-->
  <!--v-if-->
  
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="08:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="14:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  
  <span>
    <evocon-v-button-stub
      class="ma-1"
      color="quaternary-dark"
      disabled="false"
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      size="small"
      text="Time"
      textclass=""
      type="primary"
    />
  </span>
  
  
  <checklist-monthly-trigger-conditions-block-stub
    hasdayofmontherror="false"
    requirements="[object Object]"
  />
  
</div>
`;

exports[`ChecklistPeriodicTrigger > that WEEKLY trigger renders correctly 1`] = `
<div
  data-v-app=""
>
  
  
  
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue="WEEKLY"
    numericorderby="false"
    placeholder=""
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <span
    class="d-flex white-space-nowrap align-center"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="ma-1"
      >
        repeat every
      </span>
      <evocon-number-input-stub
        allowfloat="true"
        allownegative="false"
        class="ma-1"
        error="false"
        grow="true"
        maxvalue="999999999999999"
        modelvalue="1"
        suffix="week"
        usechip="true"
      />
    </div>
    <!--v-if-->
  </span>
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="text"
    itemvalue="id"
    loading="false"
    menuinputclass="ma-1"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prependtext="Days:"
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="true"
  />
  <!--v-if-->
  
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="08:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  <evocon-time-input-stub
    append-inner-icon="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
    class="ma-1"
    error="false"
    modelvalue="14:00"
    prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
    usechip="true"
  />
  
  <span>
    <evocon-v-button-stub
      class="ma-1"
      color="quaternary-dark"
      disabled="false"
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      size="small"
      text="Time"
      textclass=""
      type="primary"
    />
  </span>
  
  
  <!--v-if-->
  
</div>
`;
